# odoo18_mcp_project

./: .dockerignore  .env.example  .gitignore  CLIENT_README.md  Dockerfile  GITHUB_SETUP.md  MCP_OVERVIEW.md  MCP_SDK_README.md  Makefile  PLANNING.md  PUSH_INSTRUCTIONS.md  README.md  TASK.md  VENDOR_BILL_ANALYTIC_README.md  advanced_client_test.py  advanced_search.py  app.py  check_fields.py  claude_config.json  client_test.py  comprehensive_test.py  direct_export_import.py  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  dynamic_model_test.py  entrypoint.sh  export_import_test.py  export_import_tools.py  field_converter.py  get_product_fields.py  main.py  mcp_client_test.py  mcp_server.py  mcp_server_master.py  mcp_wrapper.py  nohup.out  odoo18_api_test.py  pyproject.toml  query_parser.py  (+38 more)
.continue/models/: new-model.yaml
docs/: EXPORT_IMPORT_TOOLS.md
exports/: partners_export.csv  products_export.csv
generated_modules/simple_todo/simple_todo/: __manifest__.py
generated_modules/simple_todo/simple_todo/models/: __init__.py  simple_todo_model.py
generated_modules/simple_todo/simple_todo/security/: ir.model.access.csv
generated_modules/simple_todo/simple_todo/views/: simple_todo_model_views.xml
odoo_docs_index/: embeddings.db
scripts/: dynamic_data_tool.py
src/: __init__.py
src/agents/: __init__.py
src/agents/export_import/: __init__.py  main.py  state.py
src/agents/export_import/nodes/: __init__.py  export_nodes.py  import_nodes.py
src/agents/export_import/utils/: __init__.py  csv_handler.py  field_mapper.py
src/core/: __init__.py  config.py  logger.py
src/mcp/: __init__.py  client.py  dynamic_handlers.py  handlers.py
src/odoo/: __init__.py  client.py  schemas.py
src/odoo/dynamic/: __init__.py  crud_generator.py  field_analyzer.py  model_discovery.py  nlp_analyzer.py
src/odoo_code_agent/: __init__.py  __main__.py  main.py  state.py
src/odoo_code_agent/nodes/: analysis_nodes.py  coding_nodes.py  feedback_nodes.py  planning_nodes.py  review_nodes.py
src/odoo_code_agent/utils/: __init__.py  code_generator.py  documentation_helper.py  fallback_models.py  file_saver.py  gemini_client.py  module_structure.py  odoo_connector.py
src/odoo_docs_rag/: __init__.py  db_storage.py  docs_processor.py  docs_retriever.py  embedding_engine.py  gemini_summarizer.py  online_search.py  patch.py  utils.py
src/odoo_tools/: __init__.py  csv_import.py
src/simple_odoo_code_agent/: __init__.py  odoo_code_generator.py
src/simple_odoo_code_agent/utils/: __init__.py  deepwiki_client.py  file_saver.py
src/streamlit_client/: __init__.py  main.py
src/streamlit_client/components/: __init__.py  chat.py  file_viewer.py
src/streamlit_client/examples/: mcp_sdk_example.py
src/streamlit_client/pages/: __init__.py  code_agent.py  code_agent_graph.py  crud_test.py  deepwiki.py  documentation.py  export_import.py  graph_visualization.py  improved_odoo_generator.py
src/streamlit_client/templates/default/: __manifest__.py.template
src/streamlit_client/templates/default/controllers/: {{ name|snake }}.py.template
src/streamlit_client/templates/default/demo/: demo_data.xml.template
src/streamlit_client/templates/default/models/: {{ name|snake }}.py.template
src/streamlit_client/templates/default/security/: ir.model.access.csv.template
src/streamlit_client/templates/default/views/: menu_views.xml.template  {{ name|snake }}_views.xml.template
src/streamlit_client/templates/default/wizards/: {{ name|snake }}.py.template
src/streamlit_client/utils/: __init__.py  diagram_utils.py  mcp_connector.py  module_generator.py  session_state.py
tests/: README.md  __init__.py  comprehensive_test.py  direct_test.py  simple_mcp_test.py  test_advanced_search.py  test_code_generator.py  test_deepwiki_tool.py  test_direct_export_import.py  test_embedding_db.py  test_enhanced_rag.py  test_export_import_agent.py  test_gemini_code_gen.py  test_generate_npx_advanced.py  test_generate_npx_case2.py  test_generator.py  test_mcp_server_consolidated.py  test_mcp_tools.py  test_module_structure.py  test_odoo_code_agent.py  test_odoo_code_agent_consolidated.py  test_odoo_code_agent_tool.py  test_odoo_code_agent_utils_consolidated.py  test_odoo_code_generator.py  test_odoo_docs_rag.py  test_product_import.py  test_specific_queries.py
tests/data/: res_partner_cycle.csv  res_partner_related.csv
tests/test_core/: __init__.py  test_config.py
tests/test_mcp/: __init__.py  test_mcp_wrapper.py
tests/test_odoo/: __init__.py  test_client.py
