[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "odoo18-mcp-integration"
version = "0.1.0"
description = "Dynamic Odoo 18 integration with MCP"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Veracious Perfect CS Pvt Ltd", email = "info@vperfectcs.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "mcp>=0.1.0",
    "sqlparse>=0.4.4",
    "pandas>=1.5.0,<2.0.0",  # Using pandas 1.x for compatibility with Python 3.12
    "torch>=2.2.0,<=2.2.2",  # Specify a compatible PyTorch version
    "faiss-cpu>=1.7.4",
    "beautifulsoup4>=4.12.2",
    "markdown>=3.4.3",
    "gitpython>=3.1.30",
    "langchain>=0.0.300",
    "numpy>=1.26.0,<2.0.0",  # Using numpy 1.x for compatibility with Python 3.12
    "langgraph>=0.0.15",
    "google-generativeai>=0.3.0",  # For Gemini integration
    "ollama>=0.1.0",  # For Ollama integration
]

[project.optional-dependencies]
dev = [
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
]
cli = [
    "mcp[cli]>=0.1.0",
]

[project.urls]
"Homepage" = "https://github.com/infovpcs/odoo18-mcp-integration"
"Bug Tracker" = "https://github.com/infovpcs/odoo18-mcp-integration/issues"

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false